2002-05-14  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R189-Tall.el, Ideograph-R170-Mound.el,
	Ideograph-R140-Grass.el, Ideograph-R130-Meat.el,
	Ideograph-R120-Silk.el, Ideograph-R117-Stand.el,
	Ideograph-R116-Cave.el, Ideograph-R113-Spirit.el,
	Ideograph-R114-Track.el, Ideograph-R115-Grain.el,
	Ideograph-R112-Stone.el, Ideograph-R110-Spear.el,
	Ideograph-R111-Arrow.el, Ideograph-R109-Eye.el,
	Ideograph-R105-Dotted-Tent.el, Ideograph-R106-White.el,
	Ideograph-R107-Skin.el, Ideograph-R108-Dish.el,
	Ideograph-R103-Bolt-Of-Cloth.el, Ideograph-R104-Sickness.el,
	Ideograph-R097-Melon.el, Ideograph-R098-Tile.el,
	Ideograph-R099-Sweet.el, Ideograph-R100-Life.el,
	Ideograph-R101-Use.el, Ideograph-R102-Field.el,
	Ideograph-R094-Dog.el, Ideograph-R096-Jade.el,
	Ideograph-R087-Claw.el, Ideograph-R088-Father.el,
	Ideograph-R089-Double-X.el, Ideograph-R090-Half-Tree-Trunk.el,
	Ideograph-R091-Slice.el, Ideograph-R092-Fang.el,
	Ideograph-R093-Cow.el, Ideograph-R086-Fire.el,
	Ideograph-R084-Steam.el, Ideograph-R085-Water.el,
	Ideograph-R080-Do-Not.el, Ideograph-R081-Compare.el,
	Ideograph-R082-Fur.el, Ideograph-R083-Clan.el,
	Ideograph-R077-Stop.el, Ideograph-R078-Death.el,
	Ideograph-R079-Weapon.el, Ideograph-R076-Lack.el,
	Ideograph-R073-Say.el, Ideograph-R074-Moon.el,
	Ideograph-R075-Tree.el, Ideograph-R070-Square.el,
	Ideograph-R071-Not.el, Ideograph-R072-Sun.el,
	Ideograph-R066-Rap.el, Ideograph-R064-Hand.el,
	Ideograph-R058-Snout.el, Ideograph-R061-Heart.el,
	Ideograph-R029-Again.el, Ideograph-R030-Mouth.el,
	Ideograph-R012-Eight.el, Ideograph-R014-Cover.el,
	Ideograph-R017-Open-Box.el, Ideograph-R008-Lid.el,
	Ideograph-R009-Man.el, Ideograph-R003-Dot.el,
	Ideograph-R004-Slash.el, Ideograph-R005-Second.el,
	Ideograph-R001-One.el, Ideograph-R002-Line.el: Add some mappings
	for CJK Ext-B code points.

2002-05-08  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* isolated-char.el (GT-30254): New character.
