@@ -186,24 +186,24 @@
 	)))
 
 (define-char
-  '((ideograph-gt-pj-4 . #x3844)
-    (ideograph-gt . 19655)
+  '((ideograph-gt-pj-4	. #x3844)
+    (ideograph-gt	. 19655)
     ))
 (define-char
-  '((ideograph-gt-pj-4 . #x3845)
-    (ideograph-gt . 19656)
+  '((ideograph-gt-pj-4	. #x3845)
+    (ideograph-gt	. 19656)
     ))
 (define-char
-  '((ideograph-gt-pj-9 . #x4D7B)
-    (ideograph-gt . 19861)
+  '((ideograph-gt-pj-9	. #x4D7B)
+    (ideograph-gt	. 19861)
     ))
 (define-char
   '((ideograph-gt-pj-4	. #x493C)
     (ideograph-gt	. 21862)
     ))
 (define-char
-  '((ideograph-gt	. 26606)
-    (ideograph-gt-pj-4	. #x6D51)
+  '((ideograph-gt-pj-4	. #x6D51)
+    (ideograph-gt	. 26606)
     ))
 (define-char
   '((ideograph-gt-pj-5	. #x4579)
